started on gui. added icons.

--- a/GUI/appsettings.json
+++ b/GUI/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "FolderPaths": {
-    "Paths": ["C:\\Users\\intern\\Documents\\code\\test"]
+    "Paths": ["C:\\Users\\peppe\\Documents\\code-stuff"]
   }
 }
