small edits. change window size

--- a/DirectoryWatcher/DirectoryWatcher.csproj
+++ b/DirectoryWatcher/DirectoryWatcher.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>dotnet-DirectoryWatcher-68D5AB28-3FFB-4E87-A6B4-60B8F6BFB557</UserSecretsId>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
