--- a/DirectoryWatcher/appsettings.json
+++ b/DirectoryWatcher/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "FolderPaths": {
-    "Paths": [ "C:\\Users\\peppe\\Documents\\code-stuff"]
+    //"Paths": [ "C:\\Users\\peppe\\Documents\\code-stuff"]
   }
 }
