--- a/GUI/appsettings.json
+++ b/GUI/appsettings.json
@@ -7,6 +7,15 @@
     }
   },
   "FolderPaths": {
-    "Paths": ["C:\\Users\\peppe\\Documents\\code-stuff"]
+    "Paths": [
+      {
+        "Directory": "C:\\Users\\peppe\\Documents\\code-stuff",
+        "Output": "C:\\Users\\peppe\\Documents\\Test"
+      },
+      {
+        "Directory": "C:\\Users\\peppe\\Documents\\code-stuff",
+        "Output": "C:\\Users\\peppe\\Documents\\Test"
+      } 
+    ]
   }
 }
